# Arifmetic-coding

./: CMakeLists.txt  main.cpp
